# kamikaze

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
.github/workflows/: linux.yml
modules/: CMakeLists.txt
modules/animation/: CMakeLists.txt  animation.c  animation.h
modules/animation_module/: animation.c  animation.h
modules/animator/: animator.h
modules/animator_module/: CMakeLists.txt  animator.c  animator.h
modules/list_module/: list_module.h
modules/resource_manager/: CMakeLists.txt  resource_manager.c  resource_manager.h
modules/resource_manager_module/: resource_manager.c  resource_manager.h
modules/sprite/: CMakeLists.txt  sprite.c  sprite.h
modules/sprite_module/: CMakeLists.txt  sprite.c  sprite.h
modules/timer_module/: CMakeLists.txt  timer.c  timer.h  timer_common.h  timer_pool.h
resources/characters/: characters.acd  characters.aed
resources/characters/knight/: knight.kmtd  knight.txt
resources/shaders/: blur.fs
resources/tilesets/greenland/: ground.tsx  information.txt
src/: CMakeLists.txt  main.c
src/include/: komatr_main.h  maicon_main.h  map.h  map_manager.h  tmx.h
src/resources/maps/: test_map.tmx
src/resources/tiled/: kamikaze.tiled-session
src/resources/tiled/maps/: test_map2.tmx
src/resources/tiled/tilesets/: cliffs.tsx  grassland.tsx  trees.tsx
src/resources/tilesets/: information.txt
src/resources/tilesets/greenland/: cliffs.tsx  entrances.tsx  greenland.tpd  trees.tsx  water.tsx
texturepacker/: greenland_tiles.tps
tiled/: FOLDER_INFO.txt  kamikaze.tiled-session
tiled/maps/: test_map.tmx  test_map2.tmx
tiled/tilesets/: cliffs.tsx  grassland.tsx  trees.tsx
